crates/harness-tui/tests/snapshots/user_message_responsive_snapshot_test__responsive_user_messages_80x24.snap
---
source: crates/harness-tui/tests/user_message_responsive_snapshot_test.rs
expression: "viewport_snapshot(width, height)"
---
--- one line ---

   [workspace]


     ❯ Ship the elevated user-message band.                         12:34 PM











    ⠋ Waiting for response… 0.0s                                          0.0s

  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                        │
  ╰───────────────────────────────────────────────────────────────────────  ─╯

  Shift+Tab:mode  │  Ctrl+c:cancel  │  Ctrl+x:shortcuts

--- wrapped ---

   [workspace]


     ❯ Explain how responsive transcript messages preserve          12:34 PM
       readable wrapping while the available width changes.










    ⠋ Waiting for response… 0.0s                                          0.0s

  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                        │
  ╰───────────────────────────────────────────────────────────────────────  ─╯

  Shift+Tab:mode  │  Ctrl+c:cancel  │  Ctrl+x:shortcuts

--- multiline ---

   [workspace]


     ❯ Check the renderer.                                          12:34 PM
       Keep this hard line break.
       验 证  CJK 宽 度 。









    ⠋ Waiting for response… 0.0s                                          0.0s

  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                        │
  ╰───────────────────────────────────────────────────────────────────────  ─╯

  Shift+Tab:mode  │  Ctrl+c:cancel  │  Ctrl+x:shortcuts

--- selected ---

   [workspace]


     ❯ This prompt is selected.                                     12:34 PM













    ⠋ Waiting for response… 0.0s                                          0.0s

  ❯ Build anything

  Shift+Tab:mode  │  Ctrl+c:cancel  │  Ctrl+x:shortcuts

--- timestamps hidden ---

   [workspace]


     ❯ This prompt hides its timestamp.











    ⠋ Waiting for response… 0.0s                                          0.0s

  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                        │
  ╰───────────────────────────────────────────────────────────────────────  ─╯

  Shift+Tab:mode  │  Ctrl+c:cancel  │  Ctrl+x:shortcuts

--- long collapsed ---

   [workspace]


     ❯ This deliberately long prompt must collapse after three      12:34 PM
       visual rows while preserving grapheme boundaries, CJK width
       correctness, timestamps, selection geometry, copy behavio …









    ⠋ Waiting for response… 0.0s                                          0.0s

  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                        │
  ╰───────────────────────────────────────────────────────────────────────  ─╯

  Shift+Tab:mode  │  Ctrl+c:cancel  │  Ctrl+x:shortcuts
